--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,11 +2,13 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
+    - { resource: "@AuctionBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
+    image_directory: '%kernel.project_dir%/web/uploads/images'
 
 framework:
     #esi: ~
@@ -30,6 +32,8 @@ framework:
     assets: ~
     php_errors:
         log: true
+    templating:
+        engine: ['twig']
 
 # Twig Configuration
 twig:
